--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
                         <li><a href="">Customers</a></li>
                         <li><a href="">Pricng</a></li>
                         <li><a href="">Resources</a></li>
-
-                        <button class="button btn-light" href="">Sign In</button>
-                        <button class="button" href="">Sign Up</button>
                     </ul>
+                    <div class="button-nav">
+                        <button class="button btn-light button-mobile" href="">Sign In</button>
+                        <button class="button button-mobile" href="">Sign Up</button>
+                    </div>
                 </nav>
             </header>
 
@@ -58,7 +59,7 @@
             </main>
 
             <section class="container-icon">
-                <h2 class="subtitle subtitle-second">We design tools to unveil your superpowers</h2>
+                <h2 class="subtitle-second">We design tools to unveil your superpowers</h2>
 
                 <div class="box-container">
                     <div class="box-text">
@@ -102,7 +103,7 @@
                         <p class="box-paragraph">Personal choices and the overall personality of the person. </p>
                     </div>
                 </div>
-                <button class="button-start button-icon button">SIGN UP NOW</button>
+                <button class="button-start button">SIGN UP NOW</button>
             </section>
 
             <section class="container-section">
